log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ing
  labels:
    app.kubernetes.io/name: log-output-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host:
      http:
        paths:
          - pathType: Prefix
            path: "/pingpong"
            backend:
              service:
                name: pingpong-svc
                port:
                  name: pingpong-port
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: log-output-svc
                port:
                  number: 2345
